fix video sizing on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,14 +19,14 @@
   --ifm-color-primary-lightest: #df3d6d;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --ifm-footer-background-color:#111010;
+  --ifm-footer-background-color: #111010;
 }
 
 /* 
 * For readability concerns, you should choose a lighter palette in dark mode. 
 * see https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima
 */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #ff2a6a;
   --ifm-color-primary-dark: #ff0c55;
   --ifm-color-primary-darker: #fc004c;
@@ -38,10 +37,9 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-.footer--dark{
-  --ifm-footer-background-color:#111010;
+.footer--dark {
+  --ifm-footer-background-color: #111010;
 }
-
 
 .code-block-error-line {
   background-color: #ff000020;
@@ -59,14 +57,23 @@ video.video-cover:not(:fullscreen) {
   object-fit: cover;
 }
 
-.video iframe{
-  border-radius: 5px;
+.video {
+  @apply max-w-full max-h-[200px];
 }
 
+@media (min-width: 500px) {
+  .video {
+    max-height: 100% !important;
+  }
+}
+
+.video iframe {
+  @apply rounded-md;
+}
 
 /* Cookie Banner */
-.cc-bottom{
+.cc-bottom {
   z-index: 2147483647;
   min-height: 80px; /* ensures it covers the intercom bar */
-  backdrop-filter: blur(10px); 
+  backdrop-filter: blur(10px);
 }
